Remove duplicate DispatchingVisitor